# Java-To-Go

./: .env.example  .gitignore  .golangci.yml  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  info.txt  main.py  pyproject.toml  run_migration.py  test.py
docs/: TASK_1.md  TASK_2.md  TASK_3.md  validation-system.md
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  App.scss  index.scss
frontend/src/components/: LandingHero.jsx  MigrationUploadSection.jsx  NeuralNexusVisual.jsx  ServiceDescription.jsx  UploadMiniGame.jsx
frontend/src/styles/: landing.scss  migration-console.scss  neural-nexus-hero.scss
java-tools/: dependency-reduced-pom.xml  pom.xml
lowcode/workflow-engine/: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  api-docs.json  env.example  lombok.config  pom.xml
lowcode/workflow-mail/: .gitlab-ci.yml  Dockerfile  README.md  api-docs.json  env.example  pom.xml
lowcode/workflow-scheduler/: README.md  api-docs.json  pom.xml
src/api/v1/: health_router.py  info.txt  (+6 more)
src/copilot/: graph.py  graph_state.py  migration_cli.py  migration_pipeline.txt  run.py  utils.py
src/services/: minio_service.py  mws_llm_factory.py  validation_orchestrator_client.py
src/settings/: config.py
validation/validation-orchestrator/: Dockerfile  README.md  pom.xml
validation/workflow-engine-parity-tests/: README.md  docker-compose.yml  pom.xml
validation/workflow-mail-parity-tests/: Dockerfile  docker-compose.yml  pom.xml
validation/workflow-scheduler-parity-tests/: docker-compose.yml  pom.xml
(+843 files in other folders)
