[project]
name = "task-repo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.0",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "langchain>=1.2.15",
    "langchain-core>=1.2.28",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.6",
    "minio>=7.2.20",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.26",
    "tree-sitter>=0.25.2",
    "tree-sitter-java>=0.23.5",
    "uvicorn>=0.44.0",
    "aiohttp>=3.13.5",
]
